objects/BMCServiceDesk__Change_Assessment__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpChangeAssessment</customHelpPage>
    <description>This object allows you to store data for change assessments.</description>
    <fields>
        <fullName>BMCServiceDesk__Assessment_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores the value if the change has the assessment completed</description>
        <inlineHelpText>Select this field if you want to complete the change assessment for the linked change request.</inlineHelpText>
        <label>Assessment Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Assessment_Completion_Date__c</fullName>
        <description>This field stores the date and time of the assessment completion</description>
        <inlineHelpText>This field is automatically set to the date when you have completed the change assessment.</inlineHelpText>
        <label>Assessment Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Assessor_ID__c</fullName>
        <description>This field stores the user name of the assessor</description>
        <formula>BMCServiceDesk__FKAssessor__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the Initiator ID of the staff member who is assessing the change request.</inlineHelpText>
        <label>Assessor ID~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Benefits_of_Change__c</fullName>
        <description>This field stores the data regarding the benefits from the change</description>
        <inlineHelpText>Use this field to enter the benefits of implementing the change request.</inlineHelpText>
        <label>Benefits of Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Business_Risks__c</fullName>
        <description>This field stores the business risks involved with the change</description>
        <inlineHelpText>From the list of options, select the level of business risk that is involved in implementing the change request.</inlineHelpText>
        <label>Business Risks</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Comments__c</fullName>
        <description>This field stores the data to allow the change assessor to add in comments</description>
        <inlineHelpText>Use this field to enter comments that you want to include in the change assessment for the change approver. The change approver can use these comments to decide about approving or rejecting the change request.</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKAssessor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked assessor</description>
        <label>Assessor ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKChange__c</fullName>
        <description>This field stores the foreign key value of the linked change</description>
        <label>Change Request</label>
        <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
        <relationshipLabel>Change Assessments</relationshipLabel>
        <relationshipName>Change_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Financial_Risks__c</fullName>
        <description>This field stores the financial  risks involved with the change</description>
        <inlineHelpText>From the list of options, select the level of financial risk that is involved in implementing the change request.</inlineHelpText>
        <label>Financial Risks</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores the value if the record is active or inactive</description>
        <inlineHelpText>Select this field if this record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Technical_Risks__c</fullName>
        <description>This field stores the technical risks involved with the change</description>
        <inlineHelpText>From the list of options, select the level of technical risk that is involved in implementing the change request.</inlineHelpText>
        <label>Technical Risks</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Change Assessment</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Assessment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>